Tu 6/6 passed on SpecificTestCaseTest v3, and add cmd menu and update doc