@@ -1,123 +1,107 @@
 package org.example;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 import java.util.logging.Logger;
 
 /**
  * Unified Morse decoder with configurable parameters.
  * Handles variable transmission speeds through statistical analysis and dynamic thresholds.
- * This implementation eliminates code duplication by providing a single, flexible decoder
- * that can be configured for different use cases.
  */
 public class MorseDecoder {
 
     private static final Logger LOGGER = Logger.getLogger(MorseDecoder.class.getName());
 
-    // Configuration
     private final MorseDecoderConfig config;
-    
-    // Cached base unit for zero threshold calculation
-    private double lastBaseUnit = 1.0;
-    
-    // Pre-compiled regex patterns
+
+    // Average dot duration cached from ones analysis, used for zero threshold calculation
+    private double avgDot = 1.0;
+
     private static final String LEADING_TRAILING_ZEROS_REGEX = "(^0+)|(0+$)";
     private static final String BIT_SPLIT_REGEX = "(?<=1)(?=0)|(?<=0)(?=1)";
 
-    /**
-     * Creates a decoder with default configuration.
-     */
     public MorseDecoder() {
         this(MorseDecoderConfig.defaultConfig());
     }
 
-    /**
-     * Creates a decoder with custom configuration.
-     */
     public MorseDecoder(MorseDecoderConfig config) {
         this.config = Objects.requireNonNull(config, "Configuration cannot be null");
     }
 
     /**
-     * Main entry point for decoding binary bits to Morse symbols.
-     * 
-     * @param bits Binary string of 0s and 1s representing Morse signal
-     * @return Morse code string with dots, dashes, and appropriate spacing
+     * Decodes a binary bit string into Morse code symbols.
+     *
+     * @param bits binary string of 0s and 1s representing a Morse signal
+     * @return Morse code string with dots, dashes, and spacing
      */
     public String decodeBitsAdvanced(String bits) {
-        if (config.isEnableLogging()) {
-            LOGGER.info("Starting advanced bit decoding. Raw length: " + bits.length());
+        if (config.isLoggingEnabled()) {
+            LOGGER.info("Starting advanced bit decoding. Raw length: %d".formatted(bits.length()));
         }
-        
-        // Validate input in strict mode
+
         if (config.isStrictMode()) {
             validateBitInput(bits);
         }
-        
-        String cleanedBits = cleanBitString(bits);
+
+        var cleanedBits = cleanBitString(bits);
         if (cleanedBits.isEmpty()) {
             return "";
         }
-        
-        String[] signalParts = cleanedBits.split(BIT_SPLIT_REGEX);
-        SignalDurations durations = extractSignalDurations(signalParts);
-        
-        double oneThreshold = calculateOneThreshold(durations.ones());
-        ThresholdPair zeroThresholds = calculateZeroThresholds(durations.zeros(), durations.ones());
-        
-        String morseResult = buildMorseString(signalParts, oneThreshold, zeroThresholds);
-        
-        if (config.isEnableLogging()) {
-            LOGGER.info("Bit decoding completed: " + morseResult);
+
+        var signalParts = cleanedBits.split(BIT_SPLIT_REGEX);
+        var durations   = extractSignalDurations(signalParts);
+
+        var oneThreshold   = calculateOneThreshold(durations.ones());
+        var zeroThresholds = calculateZeroThresholds(durations.zeros());
+        var morseResult    = buildMorseString(signalParts, oneThreshold, zeroThresholds);
+
+        if (config.isLoggingEnabled()) {
+            LOGGER.info("Bit decoding completed: %s".formatted(morseResult));
         }
-        
+
         return morseResult;
     }
 
     /**
      * Converts Morse code symbols to readable text.
-     * 
+     *
      * @param morseCode Morse code string with dots, dashes, and spacing
-     * @return Decoded text string
+     * @return decoded text string
      */
     public String decodeMorse(String morseCode) {
-        if (morseCode == null || morseCode.trim().isEmpty()) {
+        if (morseCode == null || morseCode.isBlank()) {
             return "";
         }
-        
-        if (config.isEnableLogging()) {
+
+        if (config.isLoggingEnabled()) {
             LOGGER.info("Converting Morse to text...");
         }
-        
-        String normalizedMorse = normalizeUnicodeCharacters(morseCode);
-        String decodedText = decodeMorseWords(normalizedMorse);
-        
-        if (config.isEnableLogging()) {
-            LOGGER.info("Final translation result: " + decodedText);
+
+        var decodedText = decodeMorseWords(normalizeUnicodeCharacters(morseCode));
+
+        if (config.isLoggingEnabled()) {
+            LOGGER.info("Final translation result: %s".formatted(decodedText));
         }
-        
+
         return decodedText;
     }
 
-    
-    // === Private Implementation Methods ===
+    // === Private Implementation ===
 
     private void validateBitInput(String bits) {
-        if (bits == null) {
+        if (bits == null)
             throw new IllegalArgumentException("Input cannot be null in strict mode");
-        }
-        
-        if (bits.length() > config.getMaxSignalLength()) {
-            throw new IllegalArgumentException("Input signal too long: " + bits.length() + 
-                " (max: " + config.getMaxSignalLength() + ")");
-        }
-        
-        // Check for invalid characters
+        if (bits.length() > config.getMaxSignalLength())
+            throw new IllegalArgumentException(
+                "Input signal too long: %d (max: %d)".formatted(bits.length(), config.getMaxSignalLength()));
         for (char c : bits.toCharArray()) {
-            if (c != '0' && c != '1') {
-                throw new IllegalArgumentException("Invalid character in input: '" + c + 
-                    "' (only '0' and '1' allowed in strict mode)");
-            }
+            if (c != '0' && c != '1')
+                throw new IllegalArgumentException(
+                    "Invalid character in input: '%c' (only '0' and '1' allowed in strict mode)".formatted(c));
         }
     }
 
@@ -126,17 +110,11 @@ public class MorseDecoder {
     }
 
     private SignalDurations extractSignalDurations(String[] parts) {
-        List<Integer> ones = new ArrayList<>();
+        List<Integer> ones  = new ArrayList<>();
         List<Integer> zeros = new ArrayList<>();
-        
-        for (String part : parts) {
-            if (part.contains("1")) {
-                ones.add(part.length());
-            } else {
-                zeros.add(part.length());
-            }
+        for (var part : parts) {
+            (part.contains("1") ? ones : zeros).add(part.length());
         }
-        
         return new SignalDurations(ones, zeros);
     }
 
@@ -144,244 +122,122 @@ public class MorseDecoder {
         if (ones.isEmpty()) {
             return config.getDefaultThresholdOffset();
         }
-        
-        List<Integer> sortedOnes = ones.stream().sorted().toList();
-        
-        // Use median as base unit
-        int medianIndex = sortedOnes.size() / 2;
-        int median = sortedOnes.get(medianIndex);
-        
-        // Store base unit for use in zero threshold calculation
-        this.lastBaseUnit = median;
-        
-        if (config.isEnableLogging()) {
-            LOGGER.info("Ones durations: " + ones);
-            LOGGER.info("Median (base unit): " + median);
+
+        var sortedOnes = ones.stream().sorted().toList();
+        int median = sortedOnes.get(sortedOnes.size() / 2);
+        int range  = sortedOnes.getLast() - sortedOnes.getFirst();
+
+        if (config.isLoggingEnabled()) {
+            LOGGER.info("Ones durations: %s".formatted(ones));
+            LOGGER.info("Median: %d, range: %d".formatted(median, range));
         }
-        
-        // Calculate range to detect signal complexity
-        int range = sortedOnes.get(sortedOnes.size() - 1) - sortedOnes.get(0);
-        
-        // Adaptive threshold based on signal complexity:
-        // Very complex signals (large range) use higher threshold
-        // Moderately complex signals use fixed multiplier
-        // Simple signals use gap analysis
-        double threshold;
-        if (range > 10) {
-            // Very complex signal like test case 6 - use higher threshold
-            threshold = median * 1.4;
-            if (config.isEnableLogging()) {
-                LOGGER.info("Very complex signal detected (range=" + range + "), using 1.4x median: " + threshold);
-            }
-        } else if (range > 7) {
-            // Moderately complex signal - use 1.8x median
-            threshold = median * 1.8;
-            if (config.isEnableLogging()) {
-                LOGGER.info("Moderately complex signal detected (range=" + range + "), using 1.8x median: " + threshold);
-            }
-        } else {
-            // Simple signal - use gap analysis
-            threshold = findThresholdByGapAnalysis(sortedOnes);
-            if (config.isEnableLogging()) {
-                LOGGER.info("Simple signal detected (range=" + range + "), using gap analysis: " + threshold);
-            }
+
+        double threshold = range > 3
+            ? findThresholdByFrequencyJump(ones)
+            : findThresholdByGapAnalysis(sortedOnes);
+
+        if (config.isLoggingEnabled()) {
+            LOGGER.info("One threshold: %s".formatted(threshold));
         }
-        
-        if (config.isEnableLogging()) {
-            LOGGER.info("Calculated one threshold: " + threshold);
-        }
+
+        // Cache average dot duration for zero threshold calculation
+        this.avgDot = ones.stream()
+            .filter(v -> v <= threshold)
+            .mapToInt(Integer::intValue)
+            .average()
+            .orElse(median);
+
         return threshold;
     }
 
+    /**
+     * Finds the threshold at the steepest upward frequency jump — the start of the dash cluster.
+     */
+    private double findThresholdByFrequencyJump(List<Integer> values) {
+        var freq    = values.stream().collect(Collectors.groupingBy(v -> v, Collectors.counting()));
+        int min     = values.stream().mapToInt(Integer::intValue).min().orElse(1);
+        int max     = values.stream().mapToInt(Integer::intValue).max().orElse(1);
+        int bestV   = min;
+        long bestScore = Long.MIN_VALUE;
+        for (int v = min; v < max; v++) {
+            long score = freq.getOrDefault(v + 1, 0L) - freq.getOrDefault(v, 0L);
+            if (score > bestScore) {
+                bestScore = score;
+                bestV     = v;
+            }
+        }
+        return bestV + 0.5;
+    }
+
     private double findThresholdByGapAnalysis(List<Integer> sortedValues) {
-        // Find the largest gap between consecutive values
         int maxGapIndex = findMaxGapIndex(sortedValues);
-        int maxGap = sortedValues.get(maxGapIndex + 1) - sortedValues.get(maxGapIndex);
-        
-        // If max gap is 0, all values are identical - treat as single-type signal
+        int maxGap      = sortedValues.get(maxGapIndex + 1) - sortedValues.get(maxGapIndex);
+
         if (maxGap == 0) {
-            // Determine if it's dot-only or dash-only based on the value
-            double avgValue = sortedValues.stream().mapToInt(Integer::intValue).average().orElse(1.0);
-            
-            // If average value is large (> 2), it's likely dash-only - use lower threshold
-            // If average value is small (<= 2), it's likely dot-only - use higher threshold
-            double threshold;
-            if (avgValue > 2) {
-                // Dash-only - use threshold lower than values to classify as dashes
-                threshold = avgValue * 0.5;
-                if (config.isEnableLogging()) {
-                    LOGGER.info("Dash-only signal detected (avg=" + avgValue + "), using 0.5x avg: " + threshold);
-                }
-            } else {
-                // Dot-only - use threshold higher than values to classify as dots
-                threshold = avgValue + 1;
-                if (config.isEnableLogging()) {
-                    LOGGER.info("Dot-only signal detected (avg=" + avgValue + "), using avg+1: " + threshold);
-                }
-            }
-            return threshold;
+            double avg = sortedValues.stream().mapToInt(Integer::intValue).average().orElse(1.0);
+            return avg > 2 ? avg * 0.5 : avg + 1;
         }
-        
-        // If max gap is too small (<= 2), use median instead of gap midpoint
+
         if (maxGap <= 2) {
-            int medianIndex = sortedValues.size() / 2;
-            double threshold = sortedValues.get(medianIndex);
-            if (config.isEnableLogging()) {
-                LOGGER.info("Max gap too small (max gap=" + maxGap + "), using median: " + threshold);
-            }
-            return threshold;
+            return sortedValues.get(sortedValues.size() / 2);
         }
-        
-        // Calculate threshold as midpoint of the largest gap
-        double threshold = (sortedValues.get(maxGapIndex) + sortedValues.get(maxGapIndex + 1)) / 2.0;
-        
-        if (config.isEnableLogging()) {
-            LOGGER.info("Max gap at index " + maxGapIndex + ": " + maxGap);
-            LOGGER.info("Threshold from gap analysis: " + threshold);
-        }
-        
-        return threshold;
+
+        return (sortedValues.get(maxGapIndex) + sortedValues.get(maxGapIndex + 1)) / 2.0;
     }
 
     private int findMaxGapIndex(List<Integer> sortedValues) {
         int maxGapIndex = 0;
-        int maxGap = -1;
-        
+        int maxGap      = -1;
         for (int i = 0; i < sortedValues.size() - 1; i++) {
-            int currentGap = sortedValues.get(i + 1) - sortedValues.get(i);
-            if (currentGap > maxGap) {
-                maxGap = currentGap;
+            int gap = sortedValues.get(i + 1) - sortedValues.get(i);
+            if (gap > maxGap) {
+                maxGap      = gap;
                 maxGapIndex = i;
             }
         }
-        
         return maxGapIndex;
     }
 
-    private double calculateSingleDurationThreshold(int duration) {
-        // For single duration, use a threshold that distinguishes dots from dashes
-        // If duration is small (1-3), it's a dot; if larger (4+), it's a dash
-        // Use a threshold halfway through typical Morse dot/dash range
-        return (duration <= 3) ? 1.5 : 4.5;
-    }
-
-    private ThresholdPair calculateZeroThresholds(List<Integer> zeros, List<Integer> ones) {
-        if (config.isEnableLogging()) {
-            LOGGER.info("Zeros durations: " + zeros);
+    private ThresholdPair calculateZeroThresholds(List<Integer> zeros) {
+        if (config.isLoggingEnabled()) {
+            LOGGER.info("Zeros durations: %s".formatted(zeros));
         }
-        
+
         if (zeros.isEmpty()) {
-            ThresholdPair result = new ThresholdPair(config.getMorseTimeUnitMultiplierLow(), config.getMorseTimeUnitMultiplierHigh());
-            if (config.isEnableLogging()) {
-                LOGGER.info("No zeros, using default thresholds: " + result);
-            }
-            return result;
+            return new ThresholdPair(config.getMorseTimeUnitMultiplierLow(), config.getMorseTimeUnitMultiplierHigh());
         }
-        
-        // Use the cached base unit from ones calculation
-        double baseUnit = this.lastBaseUnit;
-        
-        // Use Morse code ratios:
-        // Intra-character gap = 1 unit
-        // Inter-character gap = 3 units
-        // Word gap = 7 units
-        // Thresholds at midpoints: 1.5 units and 3.5 units (more aggressive word detection)
-        double lowThreshold = baseUnit * 1.5;  // between 1 and 2 units
-        double highThreshold = baseUnit * 3.5; // between 3 and 4 units
-        
-        ThresholdPair result = new ThresholdPair(lowThreshold, highThreshold);
-        if (config.isEnableLogging()) {
-            LOGGER.info("Zero thresholds based on Morse ratios (baseUnit=" + baseUnit + "): low=" + lowThreshold + ", high=" + highThreshold);
-        }
-        return result;
-    }
 
-    private ThresholdPair calculateDefaultZeroThresholds(List<Integer> ones) {
-        int minOne = ones.stream().min(Integer::compare).orElse(1);
-        double lowThreshold = minOne * config.getMorseTimeUnitMultiplierLow();
-        double highThreshold = minOne * config.getMorseTimeUnitMultiplierHigh();
-        return new ThresholdPair(lowThreshold, highThreshold);
-    }
-
-    private ThresholdPair calculateZeroThresholdsByGapAnalysis(List<Integer> zeros) {
-        List<Integer> sortedZeros = zeros.stream().distinct().sorted().toList();
-        
-        if (sortedZeros.size() < 3) {
-            // Not enough data points for gap analysis, use defaults
-            return new ThresholdPair(4.5, 10.5);
-        }
-        
-        // Find the largest gap to determine the high threshold (between letters and words)
-        int maxGapIndex = findMaxGapIndex(sortedZeros);
-        double highThreshold = (sortedZeros.get(maxGapIndex) + sortedZeros.get(maxGapIndex + 1)) / 2.0;
-        
-        // Find the second largest gap to determine the low threshold (within character and between letters)
-        double lowThreshold = findSecondGapThreshold(sortedZeros, maxGapIndex, highThreshold);
-        
-        // Ensure valid threshold order
-        ThresholdPair result = ensureValidThresholdOrder(lowThreshold, highThreshold);
-        
-        if (config.isEnableLogging()) {
-            LOGGER.info("Sorted zeros: " + sortedZeros);
-            LOGGER.info("Max gap index: " + maxGapIndex);
-            LOGGER.info("High threshold: " + highThreshold);
-            LOGGER.info("Low threshold: " + lowThreshold);
-        }
-        
-        return result;
-    }
-    
-    private double findClosestThreshold(List<Integer> values, int target) {
-        return values.stream()
-                .min(Comparator.comparingInt(v -> Math.abs(v - target)))
-                .map(Integer::doubleValue)
-                .orElse((double) target);
-    }
-
-    private double findSecondGapThreshold(List<Integer> sortedZeros, int maxGapIndex, double highThreshold) {
-        if (maxGapIndex <= 0) {
-            return (sortedZeros.getFirst() + highThreshold) / 2.0;
-        }
-        
-        int secondMaxGap = -1;
-        int secondGapIndex = -1;
-        
-        for (int i = 0; i < maxGapIndex; i++) {
-            int gap = sortedZeros.get(i + 1) - sortedZeros.get(i);
-            if (gap > secondMaxGap) {
-                secondMaxGap = gap;
-                secondGapIndex = i;
-            }
-        }
-        
-        if (secondGapIndex != -1) {
-            return (sortedZeros.get(secondGapIndex) + sortedZeros.get(secondGapIndex + 1)) / 2.0;
+        double low;
+        if (zeros.stream().distinct().count() <= 1) {
+            // Single zero value: all gaps are inter-char
+            low = avgDot * 1.5;
         } else {
-            return (sortedZeros.getFirst() + highThreshold) / 2.0;
+            low = findThresholdByFrequencyJump(zeros);
+            if (low < avgDot * 1.5 || low > avgDot * 4.0) {
+                low = avgDot * 2.5;
+            }
         }
-    }
 
-    private ThresholdPair ensureValidThresholdOrder(double lowThreshold, double highThreshold) {
-        if (lowThreshold >= highThreshold) {
-            lowThreshold = highThreshold / config.getThresholdSafetyFactor();
+        // Inter-word/inter-char ratio in Morse is 7:3
+        double high = low * (7.0 / 3.0);
+
+        if (config.isLoggingEnabled()) {
+            LOGGER.info("Zero thresholds (avgDot=%s): low=%s, high=%s".formatted(avgDot, low, high));
         }
-        return new ThresholdPair(lowThreshold, highThreshold);
+
+        return new ThresholdPair(low, high);
     }
 
     private String buildMorseString(String[] parts, double oneThreshold, ThresholdPair zeroThresholds) {
-        StringBuilder morseBuilder = new StringBuilder();
-        
-        for (String part : parts) {
-            int length = part.length();
-            
+        var sb = new StringBuilder();
+        for (var part : parts) {
             if (part.charAt(0) == '1') {
-                morseBuilder.append(length > oneThreshold ? config.getMorseDash() : config.getMorseDot());
+                sb.append(part.length() > oneThreshold ? config.getMorseDash() : config.getMorseDot());
             } else {
-                appendMorseSpacing(morseBuilder, length, zeroThresholds);
+                appendMorseSpacing(sb, part.length(), zeroThresholds);
             }
         }
-        
-        return morseBuilder.toString();
+        return sb.toString();
     }
 
     private void appendMorseSpacing(StringBuilder builder, int length, ThresholdPair thresholds) {
@@ -393,31 +249,24 @@ public class MorseDecoder {
     }
 
     private String normalizeUnicodeCharacters(String morseCode) {
-        return morseCode.replace(config.getUnicodeDot(), config.getMorseDot().charAt(0))
-                       .replace(config.getUnicodeDash(), config.getMorseDash().charAt(0));
+        return morseCode
+            .replace(config.getUnicodeDot(),  config.getMorseDot().charAt(0))
+            .replace(config.getUnicodeDash(), config.getMorseDash().charAt(0));
     }
 
     private String decodeMorseWords(String normalizedMorse) {
         return Arrays.stream(normalizedMorse.trim().split(config.getMorseWordSeparator()))
-                .map(this::decodeMorseWord)
-                .collect(Collectors.joining(" "));
+            .map(this::decodeMorseWord)
+            .collect(Collectors.joining(" "));
     }
 
     private String decodeMorseWord(String word) {
         return Arrays.stream(word.split(config.getMorseLetterSeparator()))
-                .map(MorseCode::get)
-                .collect(Collectors.joining());
+            .map(MorseCode::get)
+            .collect(Collectors.joining());
     }
 
-    // === Inner Classes ===
-
-    /**
-     * Record to hold signal duration data.
-     */
     private record SignalDurations(List<Integer> ones, List<Integer> zeros) {}
 
-    /**
-     * Record to hold threshold pair data.
-     */
     private record ThresholdPair(double low, double high) {}
 }
